# injectvm-binderjack

./: LICENSE  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/eu/chainfire/injectvm/injected/: IInjectedComms.aidl
app/src/main/java/eu/chainfire/injectvm/: MainActivity.java
app/src/main/java/eu/chainfire/injectvm/injected/: InjectedMain.java
app/src/main/jni/: Android.mk  Application.mk  inject_main.cpp  ndklog.h  payload_main.cpp
app/src/main/jni/libinject/: inject.cpp  inject.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
